# qwen3-tts.cpp

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
scripts/: convert_tts_to_gguf.py
src/: audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  gguf_loader.cpp  main.cpp  qwen3_tts.cpp  qwen3_tts.h  qwen3_tts_c_api.cpp  qwen3_tts_c_api.h  text_tokenizer.cpp  text_tokenizer.h  tts_transformer.cpp  tts_transformer.h
tests/: test_tokenizer.cpp
